@@ -81,4 +81,5 @@ socat TCP-LISTEN:9090,fork TCP:datastore-emulator:8081 &
 exec java \
     -Dfile.encoding=UTF-8 \
     --add-opens java.base/java.lang=ALL-UNNAMED \
+    --add-opens java.base/java.io=ALL-UNNAMED \
     -jar /prime.jar server /config/config.yaml
